# BayLing-Duplex

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  MODEL_CARD.md  NOTICE.md  README.md  pyproject.toml  requirements.txt
bayling_duplex/: __init__.py  cli.py  duplex.py
examples/: README.md
models/: README.md
scripts/: run_demo.sh
